[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["FyreFly00 <rwalkerwhf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
num-complex = "0.2.4"
num = "0.2.1"
nalgebra = "0.21.0"
hsl = "0.1.1"